<?xml version="1.0"?>
<package format="3">
  <name>simple_test_system</name>
  <version>0.0.1</version>
  <description>A simple system with a tester node and four responder nodes.</description>
  <maintainer email="user@example.com">YourName</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
